--- a/frontend/components/login.css
+++ b/frontend/components/login.css
@@ -44,7 +44,16 @@ html {
     width: 100%;
     margin-top: 40px;
     background: radial-gradient(circle, #3e5a87 ,#a3a9cf, #e7eaf5);
-    color: white;
+    color: #1d3f64;
+    cursor: pointer;
+}
+.btn_transparent {
+    text-align: center;
+    padding:10px;
+    width: 100%;
+    margin-top: -38.5px;
+    background: transparent;
+    color: transparent;
     cursor: pointer;
 }
 .msg {
